# vidoechat

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
deployments/: docker-compose.yml
game_chat/: asgi.py  settings.py  urls.py  wsgi.py
login/: views.py
login/static/login/css/: style.css
login/templates/login/: index.html  login.html
users/: views.py
users/templates/: base.html
users/templates/users/: login.html  register.html
webcamera/: apps.py  models.py  views.py
webcamera/templates/: index.html
