[tool.poetry]
name = "videochat"
version = "0.1.0"
description = ""
authors = ["osiaeg <egor.goncharov.osia@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.6"
psycopg = "^3.2.5"


[tool.poetry.group.dev.dependencies]
ipython = "^8.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
